# MiniFB.jl

./: Cargo.toml  Project.toml  binding.jl  cairo.jl  main.jl  skia.jl  test.jl
examples/: Project.toml  basic.jl  cairo.jl  cursors.jl  custom-cursor.jl  custom_type.jl  file_drop.jl  fps.jl  mouse.jl  screen_info.jl  skia.jl  test.jl  window_control.jl
src/: lib.rs
