[package]
name = "minifb_c"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# This section is crucial for creating a C-compatible dynamic library
[lib]
crate-type = [
  "cdylib",
] # Compile to a dynamic system library (.dylib, .so, .dll)
name = "minifb_c" # Sets the output library name (e.g., libminifb_wrapper.dylib)

[dependencies]
minifb = "0.28" # Specify the version of minifb you want to use
libc = "0.2"    # Often needed for C types like c_char, c_void, c_uint etc
